fixed alignment and font

--- a/src/component/about/AboutStyle.scss
+++ b/src/component/about/AboutStyle.scss
@@ -15,6 +15,10 @@
         position: relative;
         font-size: 2rem;
 
+        h1{
+            font-weight: 500;
+        }
+
         .line-about {
             position: absolute;
             width: 75%;
