--- a/src/component/home/HomeStyle.scss
+++ b/src/component/home/HomeStyle.scss
@@ -21,7 +21,7 @@
         .text-home {
             .name-home,
             .profession-home {
-                font-weight: 900;
+                font-weight: 500;
             }
 
             .profession-home {
