--- a/src/component/navbar/NavbarStyle.scss
+++ b/src/component/navbar/NavbarStyle.scss
@@ -56,7 +56,7 @@ $animationDelayLinks: 50ms;
         position: absolute;
         left: 5%;
         font-size: 2.1vw;
-        font-weight: 900;
+        font-weight: 500;
         a {
             text-decoration: none;
         }
