--- a/src/component/skill/SkillStyle.scss
+++ b/src/component/skill/SkillStyle.scss
@@ -15,6 +15,10 @@
         position: relative;
         font-size: 2rem;
 
+        h1{
+            font-weight: 500;
+        }
+
         .line-skill {
             position: absolute;
             width: 75%;
@@ -99,6 +103,7 @@
                 }
 
                 h2 {
+                    font-weight: 500;
                     display: flex;
                     justify-content: center;
                     align-items: center;
@@ -175,22 +180,31 @@
                     h2 {
                         font-size: 1.5vw;
                         align-self: flex-start;
-                        padding: 2vw;
+                        margin: 2vw;
                     }
 
                     p {
                         flex-direction: row;
                         align-self: flex-start;
                         justify-content: flex-start;
-                        padding: 0 5vw;
+                        margin: 0 5vw;
                         width: 100%;
                         
                         span{
+                            display: inline-block;
                             font-size: 1.05vw;
-                            padding-right: 8%;
+                            margin-right: 8%;
                         }
                     }
                 }
+            }
+
+            .block-skill{
+                height: 100%;
+                width: 15%;
+                top: 2%;
+                left: -2em;
+                border-radius: 15px;
             }
         }
     }
